# reson-dsp

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
benchmarks/: dsp_benchmarks.cpp
cmake/: AddReson.cmake
examples/: basic.cpp
include/reson/: denormals.hpp  dsp.hpp  reson.hpp  version.hpp
src/: cpu_arch.hpp  dsp.cpp
src/arm/: soft_clip_neon.cpp  soft_clip_neon.hpp
src/generic/: soft_clip_generic.cpp  soft_clip_generic.hpp
src/x86/: soft_clip_avx2.cpp  soft_clip_avx2.hpp
tests/: dsp_tests.cpp
